--- a/src/assets/MAIN_COLORS.scss
+++ b/src/assets/MAIN_COLORS.scss
@@ -1,5 +1,62 @@
-$bg-scene-black: #353535;
-$bg-wrapper-black: #212121;
+body {
+  --white-color: #ffffff;
+  --black-color: #000000;
 
-$bg-scene-white: #bdbdbd;
-$bg-wrapper-white: #acacac;
+  --dark-scene: #353535;
+
+  --dark-wrapper: #212121;
+  --dark-wrapper-shadow: #2c2c2c;
+
+  // большие блоки
+  --dark-block: #2b2b2b;
+  --dark-block-hover: #313131;
+  --dark-block-2: #333333;
+
+  // меню в заголовке
+  --dark-block-3: #424242;
+  --dark-block-3-hover: #575757;
+
+  --dark-header: #292929;
+
+  --dark-button: #333333;
+  --dark-button-hover: #4a4a4a;
+
+  --dark-button-2: #3a3a3a;
+  --dark-button-2-hover: #525252;
+
+  --green-button-done: #156f2a;
+  --green-button-done-hover: #299442;
+
+  --blue-button-queue: #486894;
+  --blue-button-queue-hover: #415b80;
+
+  --pink-button-selected: #ef4d6e;
+
+  --gold-star: #d6ab09;
+
+  // шрифты
+  --dark-font: #e2e2e2;
+  --dark-font-2: #9e9e9e;
+  --dark-font-hover: #aaaaaa;
+  --dark-font-wrong: #ff0909;
+  --dark-font-name: #e24b4b;
+
+  --dark-transparent-block: #000000f0;
+  --dark-transparent-block-1: #00000023;
+  // границы
+  --dark-border: #313131;
+  --dark-border-2: #444444;
+  --dark-border-3: #5a5a5a;
+  --dark-border-4: #818181;
+
+  --dark-border-hover: #a8a8a8;
+
+  --dark-border-input-focus: #af4d4d;
+
+  --dark-img-hover: #666666;
+
+  // регистрация
+  --dark-registration-bg: #000000b0;
+  --dark-input: #464646;
+  --dark-input-focus: #535353;
+}
