--- a/src/components/Description/Description.module.scss
+++ b/src/components/Description/Description.module.scss
@@ -26,16 +26,16 @@
         width: fit-content;
       }
       .line {
-        color: #a0a0a0;
+        color: var(--dark-font-2);
         width: fit-content;
         .lineInfo {
-          color: rgb(255, 255, 255);
+          color: var(--dark-font);
           font-weight: bold;
           margin-left: 8px;
         }
       }
       .date {
-        color: rgb(255, 255, 255);
+        color: var(--dark-font);
         font-weight: bold;
       }
     }
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;   
     font-size: 14px;
-    border-left: 1px solid #616161;
+    border-left: 1px solid var(--dark-border-3);
     .image {
       width: 80%;
       display: inline-block;
@@ -63,7 +63,7 @@
   }
   .descriptionWrap {
     grid-area: desc;
-    border-top: 1px solid #616161;
+    border-top: 1px solid var(--dark-border-3);
     padding: 15px;
     .title {
       font-size: 22px;
