--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background-color: #272727;
+  background-color: var(--dark-block);
   border-radius: 4px;
   position: relative;
   display: flex;
@@ -8,23 +8,23 @@
   box-sizing: border-box;
   padding: 15px;
   font-size: 15px;
-  color: #e2e2e2;
+  color: var(--dark-font);
   &:not(:first-child) {
     margin-top: 15px;
   }
   transition: 0.2s background-color;
   &:hover {
-    background-color: #2c2c2c;
+    background-color: var(--dark-block-hover);
   }
-  &.done {
-    background-color: #36363c;
-    &:hover {
-      background-color: #3a3a42;
-    }
-  }
+  // &.done {
+  //   background-color: #36363c;
+  //   &:hover {
+  //     background-color: #3a3a42;
+  //   }
+  // }
   .imgLink {
     transition: 0.2s box-shadow;
-    border-radius: 8px;
+    border-radius: 4px;
     &.list {
       max-width: 120px;
       max-height: 120px;
@@ -34,7 +34,7 @@
       max-height: 235px;
     }
     &:hover {
-      box-shadow: 0px 0px 2px 3px #525252;
+      box-shadow: 0px 0px 2px 3px var(--dark-img-hover);
     }
     .image {
       max-width: inherit;
@@ -57,20 +57,20 @@
       width: fit-content;
       a {
         text-decoration: none;
-        color: rgb(255, 255, 255);
+        color: var(--dark-font);
         transition: 0.2s color;
         &:hover {
-          color: rgb(170, 170, 170);
+          color: var(--dark-font-hover);
         }
       }
     }
     .line {
-      color: #a0a0a0;
+      color: var(--dark-font-2);
       width: fit-content;
       margin-left: 15px;
       margin-top: 8px;
       .data {
-        color: rgb(255, 255, 255);
+        color: var(--dark-font);
         font-weight: bold;
         margin-left: 8px;
         .genreEl {
@@ -96,7 +96,7 @@
     transition: .2s border;
     border-radius: 0px;
     &:hover {
-      border: 1px solid #a8a8a8;
+      border: 1px solid var(--dark-border-hover);
     }
     .image {
       width: 100%;
@@ -106,9 +106,8 @@
       bottom: 0px;
       left: 0px;
       width: 100%;
-      background-color: black;
-      opacity: .9;
-      color: white;
+      background-color: var(--dark-transparent-block);
+      color: var(--dark-font);
       padding: 5px 5px 10px;
       box-sizing: border-box;
       font-size: 11px;
