--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     &:not(:first-child) {
-      border-top: 1px solid #444444;
+      border-top: 1px solid var(--dark-border-2);
       padding-top: 5px;
     }
     &:not(:last-child) {
