--- a/src/components/RandomItemsMenu/RandomItemsMenu.module.scss
+++ b/src/components/RandomItemsMenu/RandomItemsMenu.module.scss
@@ -1,49 +1,9 @@
 .wrapper {
   position: relative;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
   border-radius: 4px;
-  font-size: 14px;
-  color: #e2e2e2;
-  background-color: #2b2b2b;
+  background-color: var(--dark-block);
   padding: 12px;
-  a {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    .image {
-      max-width: 100%;
-      min-height: 100%;
-      border-radius: 4px;
-    }
-    .text {
-      position: absolute;
-      bottom: 0px;
-      left: 0px;
-      width: 100%;
-      background-color: black;
-      opacity: .9;
-      color: white;
-      padding: 5px 5px 10px;
-      box-sizing: border-box;
-      font-size: 11px;
-      transform: translateY(100%);
-      transition: .3s transform;
-      .title {
-        font-size: 13px;
-      }
-      .description {
-        margin-top: 5px;
-      }
-    }
-    &:hover {
-      .text {
-        transform: translateY(0);
-      }
-    }
-  }
 }
 
 @media (max-width: 950px) {
