--- a/src/components/ScrollItems/ScrollItems.module.scss
+++ b/src/components/ScrollItems/ScrollItems.module.scss
@@ -13,10 +13,10 @@
     align-items: center;
     height: 100%;
     border-radius: 4px;
-    background-color: #2f2f2f;
+    background-color: var(--dark-block);
     transition: 0.2s background-color;
     &:hover {
-      background-color: #383838;
+      background-color: var(--dark-block-hover);
       cursor: pointer;
     }
     img {
@@ -37,7 +37,7 @@
       left: 10px;
       font-size: 22px;
       pointer-events: none;
-      color: white;
+      color: var(--dark-font);
     }
   }
   .buttonRight {
