--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -19,17 +19,17 @@
       justify-content: center;
       align-items: center;
       border-radius: 4px;
-      border: 1px solid #828282;
-      background-color: #272727;
+      border: 1px solid var(--dark-border-2);
+      background-color: var(--dark-block);
       transition: 0.2s background-color;
       &.added {
-        background-color: #156f2a;
+        background-color: var(--green-button-done);
         border: 0px;
       }
       &:hover {
         cursor: pointer;
         &.added {
-          background-color: #299442;
+          background-color: var(--green-button-done-hover);
         }
       }
       &.buttonOpenStars {
@@ -50,7 +50,7 @@
         line-height: 30px;
       }
       .starInButton {
-        color: #cccccc;
+        color: var(--dark-font);
       }
       .currentRating {
         font-size: 20px;
@@ -68,8 +68,8 @@
     padding-left: 5px;
     opacity: 0;
     visibility: hidden;
-    border: 1px solid #828282;
-    background-color: #272727;
+    border: 1px solid var(--dark-border-2);
+    background-color: var(--dark-block);
     border-right: 0px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -80,7 +80,7 @@
       align-items: center;
       cursor: pointer;
       &.selected {
-        color: #d6ab0e;
+        color: var(--gold-star);
       }
     }
     &.visible {
