--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -3,8 +3,8 @@
   box-sizing: border-box;
   border-radius: 4px;
   font-size: 14px;
-  color: #e2e2e2;
-  background-color: #2b2b2b;
+  color: var(--dark-font);
+  background-color: var(--dark-block);
   .loginBlockMobile {
     display: flex;
     flex-direction: column;
@@ -20,12 +20,12 @@
       .name {
         font-size: 16px;
         font-weight: bold;
-        color: rgb(173, 112, 112);
+        color: var(--dark-font-name);
       }
     }
     .title {
       padding-left: 10px;
-      border-top: 1px solid #404040;
+      border-top: 1px solid var(--dark-border);
       margin-top: 5px;
       padding-top: 5px;
     }
@@ -39,10 +39,10 @@
       display: flex;
       justify-content: space-between;
       margin-top: 15px;
-      border-top: 1px solid #444343;
+      border-top: 1px solid var(--dark-border);
       a {
         text-decoration: none;
-        color: rgb(226, 226, 226);
+        color: var(--dark-font);
         width: 50%;
         overflow: hidden;
         border-bottom-left-radius: 4px;
@@ -50,7 +50,7 @@
       > div {
         border-bottom-right-radius: 4px;
         width: 50%;
-        border-left: 1px solid #444343;
+        border-left: 1px solid var(--dark-border);
       }
       .button {
         position: relative;
@@ -62,7 +62,7 @@
         transition: 0.2s background-color;
         &:hover {
           cursor: pointer;
-          background-color: rgb(58, 58, 58);
+          background-color: var(--dark-block-hover);
           .text {
             opacity: 1;
           }
@@ -78,7 +78,7 @@
           width: 100%;
           height: 100%;
           font-size: 12px;
-          background-color: rgb(58, 58, 58);
+          background-color: var(--dark-block-hover);
           opacity: 0.85;
           transition: 0.2s opacity;
           opacity: 0;
@@ -100,7 +100,6 @@
       align-items: center;
       width: -webkit-fill-available;
       width: -moz-available;
-      background-color: rgb(43, 42, 42);
       height: 58px;
       transition: 0.1s background-color;
       &:hover {
@@ -134,7 +133,7 @@
           text-decoration: none;
           font-size: 16px;
           font-weight: bold;
-          color: rgb(173, 112, 112);
+          color: var(--dark-font-name);
           padding: 0 10px;
           display: flex;
           align-items: center;
