--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -4,11 +4,11 @@
     flex-direction: column;
     .user {
       padding: 15px;
-      background-color: #272727;
+      background-color: var(--dark-block);
       border-radius: 4px;
       transition: 0.2s background-color;
       &:hover {
-        background-color: #2c2c2c;
+        background-color: var(--dark-block-hover);
       }
     }
     :not(:first-child) {
