--- a/src/components/UsersMenu/UsersMenu.module.scss
+++ b/src/components/UsersMenu/UsersMenu.module.scss
@@ -4,8 +4,8 @@
   box-sizing: border-box;
   border-radius: 4px;
   font-size: 14px;
-  color: #e2e2e2;
-  background-color: #2b2b2b;
+  color: var(--dark-font);
+  background-color: var(--dark-block);
   padding: 15px;
   .user {
     position: relative;
@@ -22,7 +22,7 @@
         color: white;
         transition: .2s color;
         &:hover {
-          color: rgb(180, 180, 180);
+          color: var(--dark-font-hover);
         }
       }
     }
@@ -38,18 +38,18 @@
   }
   .wrongLoad {
     text-align: center;
-    color: rgb(112, 34, 34);
+    color: var(--dark-font-wrong);
   }
   .allUsersLink {
-    border-top: 1px solid #3b3b3b;
+    border-top: 1px solid var(--dark-border);
     margin-top: 10px;
     padding-top: 5px;
     a {
       text-decoration: none;
-      color: white;
+      color: var(--dark-font);
       transition: .2s color;
       &:hover {
-        color: rgb(180, 180, 180);
+        color: var(--dark-font-hover);
       }
     }
   }
