--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -80,8 +80,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    .searc, .userMenu {
+    .search, .userMenu {
       height: 100%;
+    }
+    .search {
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
     }
   }
 }
