get 10 random by genre in main page

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -4,7 +4,7 @@
     font-size: 24px;
     padding-bottom: 10px;
   }
-  .lastViewed {
+  .lastViewed, .randomItemsByGenre {
     display: flex;
     flex-direction: column;
     &:not(:first-child) {
