--- a/src/components/ScrollItems/ScrollItems.module.scss
+++ b/src/components/ScrollItems/ScrollItems.module.scss
@@ -33,6 +33,7 @@
     }
     .title {
       position: absolute;
+      width: max-content;
       top: -30px;
       left: 10px;
       font-size: 22px;
