add change direction to Star component

--- a/src/assets/MAIN_COLORS.scss
+++ b/src/assets/MAIN_COLORS.scss
@@ -27,6 +27,12 @@ body {
   --green-button-done: #156f2a;
   --green-button-done-hover: #299442;
 
+  --yellow-button-done: #b18d31;
+  --yellow-button-done-hover: #c79b2b;
+
+  --red-button-done: #9e3434;
+  --red-button-done-hover: #b13b3b;
+
   --blue-button-queue: #486894;
   --blue-button-queue-hover: #415b80;
 
