--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -22,19 +22,29 @@
       border: 1px solid var(--dark-border-2);
       background-color: var(--dark-block);
       transition: 0.2s background-color;
-      &.added {
-        background-color: var(--green-button-done);
-        border: 0px;
-      }
       &:hover {
         cursor: pointer;
-        &.added {
-          background-color: var(--green-button-done-hover);
-        }
       }
-      &.buttonOpenStars {
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
+      &.done {
+        border: 0px;
+        &.green {
+          background-color: var(--green-button-done);
+          &:hover {
+            background-color: var(--green-button-done-hover);
+          }
+        }
+        &.yellow {
+          background-color: var(--yellow-button-done);
+          &:hover {
+            background-color: var(--yellow-button-done-hover);
+          }
+        }
+        &.red {
+          background-color: var(--red-button-done);
+          &:hover {
+            background-color: var(--red-button-done-hover);
+          }
+        }
       }
       &.visible {
         visibility: visible;
@@ -59,20 +69,14 @@
   }
   .starsWrap {
     position: absolute;
-    right: 33px;
     display: flex;
-    flex-direction: row;
     box-sizing: border-box;
-    height: 33px;
     padding-right: 5px;
     padding-left: 5px;
     opacity: 0;
     visibility: hidden;
     border: 1px solid var(--dark-border-2);
     background-color: var(--dark-block);
-    border-right: 0px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
     .star {
       font-size: 24px;
       line-height: 20px;
@@ -86,6 +90,41 @@
     &.visible {
       opacity: 1;
       visibility: visible;
+    }
+  }
+  &.left {
+    .button {
+      .buttonInner.buttonOpenStars {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+      }
+    }
+    .starsWrap {
+      flex-direction: row;
+      height: 33px;
+      right: 33px;
+      top: 0px;
+      border-right: 0px;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+  }
+  &.bottom {
+    .button {
+      .buttonInner.buttonOpenStars {
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+      }
+    }
+    .starsWrap {
+      flex-direction: column-reverse;
+      height: auto;
+      width: 33px;
+      right: 0px;
+      top: 33px;
+      border-right: 0px;
+      border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
     }
   }
 }
