--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -92,11 +92,19 @@
     &:hover {
       border: 1px solid var(--dark-border-hover);
     }
-    .stars {
+    .topBlock {
       position: absolute;
-      right: 5px;
-      top: 5px;
-      z-index: 1;
+      left: 0px;
+      top: 0px;
+      background-color: var(--dark-transparent-block-1);
+      width: 100%;
+      height: 44px;
+      .stars {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        z-index: 1;
+      }
     }
     .image {
       width: 100%;
