--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -71,8 +71,6 @@
     position: absolute;
     display: flex;
     box-sizing: border-box;
-    padding-right: 5px;
-    padding-left: 5px;
     opacity: 0;
     visibility: hidden;
     border: 1px solid var(--dark-border-2);
@@ -82,6 +80,7 @@
       line-height: 20px;
       display: flex;
       align-items: center;
+      justify-content: center;
       cursor: pointer;
       &.selected {
         color: var(--gold-star);
@@ -104,6 +103,8 @@
       height: 33px;
       right: 33px;
       top: 0px;
+      padding-right: 5px;
+      padding-left: 5px;
       border-right: 0px;
       border-top-left-radius: 4px;
       border-bottom-left-radius: 4px;
@@ -122,6 +123,8 @@
       width: 33px;
       right: 0px;
       top: 33px;
+      padding-top: 5px;
+      padding-bottom: 5px;
       border-right: 0px;
       border-bottom-right-radius: 4px;
       border-bottom-left-radius: 4px;
