--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -51,3 +51,48 @@
     }
   }
 }
+
+@media (max-width: 950px) {
+  .wrapper {
+      .dropdown {
+        height: fit-content;
+        width: -webkit-fill-available;
+        width: -moz-available;
+        &:not(:first-child) {
+          margin-top: 0;
+          .button {
+            border-left: 1px solid var(--dark-button);
+          }
+        }
+        .button {
+          padding: 0 10px 0 20px;
+          height: 48px;
+          display: flex;
+          align-items: center;
+          background-color: var(--dark-block);
+          &:hover {
+            cursor: pointer;
+            background-color: var(--dark-block-hover);
+          }
+          span {
+            width: min-content;
+          }
+          .angle {
+            margin-left: 10px;
+            width: 20px;
+            transition: 0.3s transform;
+            transform: rotate(0deg);
+            &.reverse {
+              transform: rotate(-180deg);
+            }
+          }
+        }
+        .dropdownBlock {
+          .dropdownButton {
+            border: 1px solid var(--dark-border-2);
+            border-top: 0px;
+          }
+        }
+      }
+    }
+  }
