add links for filter in lists

--- a/src/assets/MAIN_COLORS.scss
+++ b/src/assets/MAIN_COLORS.scss
@@ -47,6 +47,10 @@ body {
   --dark-font-wrong: #ff0909;
   --dark-font-name: #e24b4b;
 
+  // ссылки
+  --dark-link: #3ea6ff;
+  --dark-link-hover: #3f93dd;
+
   --dark-transparent-block: #000000f0;
   --dark-transparent-block-1: #000000a1;
   --dark-transparent-block-2: #00000023;
