--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -7,6 +7,7 @@
   align-items: flex-start;
   box-sizing: border-box;
   padding: 15px;
+  height: 100%;
   font-size: 15px;
   color: var(--dark-font);
   &:not(:first-child) {
@@ -40,11 +41,11 @@
     }
   }
   .info {
-    padding: 0px 0px 0px 30px;
+    padding: 0px 0px 0px 20px;
     display: flex;
     flex-direction: column;
     &.placeForButtons {
-      padding-right: 150px;
+      padding-right: 135px;
     }
     .title {
       font-size: 24px;
@@ -67,8 +68,17 @@
         color: var(--dark-font);
         font-weight: bold;
         margin-left: 8px;
+        &.link, .link {
+          transition: .1s color;
+          color: var(--dark-link);
+          &:hover {
+            cursor: pointer;
+            color: var(--dark-link-hover);
+          }
+        }
         .genreEl {
           display: inline-block;
+          margin-left: 5px;
         }
       }
     }
@@ -96,7 +106,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      background-color: var(--dark-transparent-block-1);
+      // background-color: var(--dark-transparent-block-1);
       width: 100%;
       height: 44px;
       .stars {
